--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <!-- Clock -->
     <p id="clock"></p>
 
-    <!-- Weather info -->
-    <div id="weather-container">
-      <p id="weather">Loading weather...</p>
+    <!-- Day & Date -->
+    <div id="date-container">
+      <p id="weather">Loading day...</p>
       <p id="forecast"></p>
     </div>
   </div>
