--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
     <!-- Clock -->
     <p id="clock"></p>
 
-    <!-- Day & Date -->
-    <div id="date-container">
-      <p id="weather">Loading day...</p>
-      <p id="forecast"></p>
-    </div>
+    <!-- Date including weekday -->
+    <p id="forecast"></p>
   </div>
 
   <!-- Script -->
