--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <!-- Clock -->
     <p id="clock"></p>
 
-    <!-- Date including weekday -->
-    <p id="forecast"></p>
+    <!-- Date -->
+    <p id="date"></p>
   </div>
 
   <!-- Script -->
