--- a/index.html
+++ b/index.html
@@ -20,12 +20,27 @@
 
     <!-- Verse + Daily Quote -->
     <p id="verse"></p>
+    <button id="shareButton">Share</button>
 
     <!-- Clock -->
     <p id="clock"></p>
 
     <!-- Date -->
     <p id="date"></p>
+  </div>
+
+  <!-- Share Modal -->
+  <div id="shareModal" class="modal">
+    <div class="modal-content">
+      <h3>Share Verse and Quote</h3>
+      <button id="shareDevice">Share (Device)</button>
+      <button id="shareWhatsApp">WhatsApp</button>
+      <button id="shareTwitter">Twitter</button>
+      <button id="shareFacebook">Facebook</button>
+      <button id="shareTikTok">TikTok</button>
+      <button id="copyVerse">Copy Verse</button>
+      <button id="closeModal">Close</button>
+    </div>
   </div>
 
   <!-- Script -->
